--- a/styles/styles.css
+++ b/styles/styles.css
@@ -413,28 +413,7 @@ h5 {
   width: 60rem;
 }
 
-@media screen and (max-width: 767px) {
-  .flip-card-front {
-    margin-left: 2.8%;
-    margin-top: 3%;
-    width: 46%;
-  }
-  .flip-card-back {
-    height: 285px;
-  }
-  .flip-card-front{
-    margin-bottom: 3%;
-  }
-}
 
-@media screen and (max-width: 480px) {
-  .flip-card-front {
-    width: 94.5%;
-  }
-  .flip-card-back {
-    height: 260px;
-  }
-}
 
 
 
@@ -710,4 +689,33 @@ h5 {
 /* Add some hover effects to buttons */
 .form-container3 .btn3:hover, .open-button3:hover {
   opacity: 1;
+}
+
+
+
+
+/* --------------------- CONTACT PAGE ---------------------- */
+
+.body-contact{
+  background-color: #EEF2E6;
+}
+
+.location-header{
+    grid-column: 1/3;
+}
+
+.wrapper-contact{
+  display: grid;
+  grid-column: 2/3;
+  grid-template-columns: 4fr 3fr;
+
+}
+
+.wrapper-contact > div{
+  background: #eee;
+  padding:1em;
+}
+
+.wrapper-contact > div:nth-child(odd){
+  background: #ddd;
 }
