--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,27 @@
+:root {
+  /* COLORS */
+  --green: #158467;
+  --broken-white: #EEF2E6;
+  --purple-blue: #2c2e65;
+  --orange: #ef672e;
+  --white: #fff;
+  --dark-white: #ddd;
+  --grey: #f1f1f1;
+  --black: #000000;
+
+  /* FONT SIZES */
+  --small: 1.2rem;
+  --medium: 1.5rem;
+  --large: 2.5rem;
+
+  /* RESPONSIVE FONT SIZES */
+  --small-resp: 1vw;
+  --normal-resp: 2vw;
+  --medium-resp: 2.5vw;
+  --large-resp: 3vw;
+
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   max-width: 100vw;
@@ -5,8 +29,8 @@ body {
 }
 
 #title {
-  background-color: #158467;
-  color: #fff;
+  background-color: var(--green);
+  color: var(--white);
 }
 
 /* --------------------- NAV BAR ---------------------- */
@@ -24,7 +48,7 @@ body {
 
 .navbar-brand {
   font-family: 'Ubuntu', sans-serif;
-  font-size: 1.5rem;
+  font-size: var(--medium);
   font-weight: bold;
 }
 
@@ -33,14 +57,14 @@ body {
 }
 
 .nav-link {
-  font-size: 1.2rem;
+  font-size: var(--small);
   font-family: 'Montserrat', sans-serif;
   font-weight: 100;
 }
 
 /* --------------------- SECTION 1, KIJK LIVE MEE ---------------------- */
 #live {
-  background-color: #EEF2E6;
+  background-color: var(--broken-white);
 }
 
 .liveContainer {
@@ -56,15 +80,15 @@ body {
 
 h1 {
   font-family: 'Montserrat', sans-serif;
-  color: #2c2e65;
+  color: var(--purple-blue);
   font-weight: 800;
-  font-size: 2.5rem;
+  font-size: var(--large);
   text-align: center;
 }
 
 /* Section 2 */
 #howDoesItWorks {
-  background-color: #158467;
+  background-color: var(--green);
   padding-bottom: 10%;
 }
 
@@ -73,58 +97,58 @@ h1 {
 }
 
 h2 {
-  font-size: 2.5rem;
-  color: white;
+  font-size: var(--large);
+  color: var(--white);
   text-align: center;
 }
 
 /* --------------------- CAROUSEL, HOE WERKT HET ---------------------- */
 .carouselContainer {
-  background-color: #EEF2E6;
+  background-color: var(--broken-white);
   width: 60%;
   margin-left: 20%;
   border-radius: 15px;
 }
 
 .carousel-control-prev-icon {
-  background-color: #2c2e65;
+  background-color: var(--purple-blue);
 }
 
 .carousel-control-next-icon {
-  background-color: #2c2e65;
+  background-color: var(--purple-blue);
 }
 
 .parRight {
   /* Make a responsive fontsize */
-  font-size: 2vw;
+  font-size: var(--normal-resp);
   text-align: left;
   max-width: 30%;
   float: right;
   margin-right: 15%;
   margin-top: 24%;
-  color: #2c2e65;
+  color: var(--purple-blue);
 }
 
 .parLeft {
   /* Make a responsive fontsize */
-  font-size: 2vw;
+  font-size: var(--normal-resp);
   text-align: left;
   max-width: 30%;
   float: inherit;
   margin-left: 20%;
   margin-top: 24%;
-  color: #2c2e65;
+  color: var(--purple-blue);
 }
 
 .parLeftJeej {
   /* Make a responsive fontsize */
-  font-size: 2vw;
+  font-size: var(--normal-resp);
   text-align: left;
   max-width: 40%;
   float: inherit;
   margin-left: 20%;
   margin-top: 18%;
-  color: #2c2e65;
+  color: var(--purple-blue);
 }
 
 .carouselImagePlant {
@@ -171,8 +195,8 @@ h2 {
 
 /* Button used to open the contact form*/
 .open-button {
-  background-color: #ef672e;
-  color: white;
+  background-color: var(--orange);
+  color: var(--white);
   padding: 16px 20px;
   border: none;
   cursor: pointer;
@@ -189,7 +213,7 @@ h2 {
   position: fixed;
   bottom: 0;
   right: 15px;
-  border: 3px solid #f1f1f1;
+  border: 3px solid var(--broken-white);
   z-index: 9;
 }
 
@@ -198,7 +222,7 @@ h2 {
   max-width: 300px;
   max-height: 870px;
   padding: 10px;
-  background-color: white;
+  background-color: var(--white);
 }
 
 /* Full-width input fields */
@@ -208,7 +232,7 @@ h2 {
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
-  background: #f1f1f1;
+  background: var(--grey);
 }
 
 .form-container input[type=date], .form-container input[type=date] {
@@ -217,7 +241,7 @@ h2 {
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
-  background: #f1f1f1;
+  background: var(--grey);
 }
 
 .form-container input[type=tel], .form-container input[type=tel] {
@@ -226,7 +250,7 @@ h2 {
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
-  background: #f1f1f1;
+  background: var(--grey);
 }
 
 .form-container input[type=email], .form-container input[type=email] {
@@ -235,34 +259,34 @@ h2 {
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
-  background: #f1f1f1;
+  background: var(--grey);
 }
 
 /* When the inputs get focus, do something */
 .form-container input[type=text]:focus, .form-container input[type=text]:focus {
-  background-color: #ddd;
+  background-color: var(--dark-white);
   outline: none;
 }
 
 .form-container input[type=date]:focus, .form-container input[type=date]:focus {
-  background-color: #ddd;
+  background-color: var(--dark-white);
   outline: none;
 }
 
 .form-container input[type=tel]:focus, .form-container input[type=tel]:focus {
-  background-color: #ddd;
+  background-color: var(--dark-white);
   outline: none;
 }
 
 .form-container input[type=email]:focus, .form-container input[type=email]:focus {
-  background-color: #ddd;
+  background-color: var(--dark-white);
   outline: none;
 }
 
 /* Set a style for the reservation button */
 .form-container .btn {
-  background-color: #158467;
-  color: white;
+  background-color: var(--green);
+  color: var(--white);
   padding: 16px 20px;
   border: none;
   cursor: pointer;
@@ -273,7 +297,7 @@ h2 {
 
 /* Give close button a color */
 .form-container .cancel {
-  background-color: #ef672e;
+  background-color: var(--orange);
 }
 
 /* Add some hover effects to buttons */
@@ -295,7 +319,7 @@ h2 {
 
 /* --------------------- SECTION 3, VISIE ---------------------- */
 #vision {
-  background-color: #EEF2E6;
+  background-color: var(--broken-white);
 }
 
 .visionCards {
@@ -320,21 +344,21 @@ h2 {
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: var(--medium);
   padding-top: 5%;
-  color: #2c2e65;
+  color: var(--purple-blue);
 }
 
 h4 {
-  font-size: 1.5rem;
+  font-size: var(--medium);
   padding-top: 5%;
-  color: #2c2e65;
+  color: var(--purple-blue);
 }
 
 h5 {
-  font-size: 1.5rem;
+  font-size: var(--medium);
   padding-top: 5%;
-  color: #2c2e65;
+  color: var(--purple-blue);
 }
 
 .parVitaliteit {
@@ -360,7 +384,7 @@ h5 {
   margin: auto;
   width: 300px;
   height: 300px;
-  border: 1px solid #f1f1f1;
+  border: 1px solid var(--grey);
   perspective: 1000px;
 }
 
@@ -394,19 +418,19 @@ h5 {
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
   /* background-color: #bbb; */
-  color: black;
+  color: var(--black);
 }
 
 /* Style the back side */
 .flip-card-back {
-  background-color: #2c2e65;
-  color: white;
+  background-color: var(--purple-blue);
+  color: var(--white);
   transform: rotateY(180deg);
 }
 
 /* Footer */
 .footer {
-  background-color: #158467;
+  background-color: var(--green);
 }
 
 .footerImage2 {
@@ -423,7 +447,7 @@ h5 {
 
 /* Agenda content */
 #agendaContent {
-  background-color: #EEF2E6;
+  background-color: var(--broken-white);
 }
 
 /* > = all the directive divs in the wrapper */
@@ -449,7 +473,7 @@ h5 {
 }
 
 /* .containerFilter{
-  background-color: #ef672e;
+  background-color: var(--orange);
   border-radius: 1.2em;
 }
 
@@ -470,38 +494,38 @@ h5 {
 }
 
 .parWorkshops {
-  font-size: 1vw;
+  font-size: var(--small-resp);
 }
 
 .h1Workshops {
-  font-size: 3vw;
+  font-size: var(--large-resp);
   padding-top: 1em;
   padding-bottom: 1em;
 }
 
 .h2Filter {
-  font-size: 1.8vw;
+  font-size: var(--normal-resp);
   padding-top: 1em;
 }
 
 .h3Workshops {
-  font-size: 2.5vw;
+  font-size: var(--medium-resp);
 }
 
 .containerImage {
-  background-color: white;
+  background-color: var(--white);
 }
 
 .containerContent {
-  background: white;
+  background: var(--white);
 }
 
 /* --------------------- FORM, FILTER ---------------------- */
 
 /* Button used to open the contact form*/
 .open-button2 {
-  background-color: #ef672e;
-  color: white;
+  background-color: var(--orange);
+  color: var(--white);
   padding: 16px 20px;
   border: none;
   cursor: pointer;
@@ -528,7 +552,7 @@ h5 {
   max-width: 400px;
   max-height: 870px;
   padding: 10px;
-  background-color: white;
+  background-color: var(--white);
 }
 
 /* Full-width input fields */
@@ -538,7 +562,7 @@ h5 {
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
-  background: #f1f1f1;
+  background: var(--grey);
 }
 
 .form-container2 input[type=checkbox], .form-container2 input[type=checkbox] {
@@ -546,17 +570,17 @@ h5 {
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
-  background: #f1f1f1; */
+  background: var(--grey); */
 }
 
 /* When the inputs get focus, do something */
 .form-container2 input[type=text]:focus, .form-container2 input[type=text]:focus {
-  background-color: #ddd;
+  background-color: var(--dark-white);
   outline: none;
 }
 
 .form-container2 input[type=checkbox]:focus, .form-container2 input[type=checkbox]:focus {
-  /* background-color: #ddd;
+  /* background-color: var(--dark-white);
   outline: none; */
 }
 
@@ -570,7 +594,7 @@ h5 {
 
 /* Give close button a color */
 .form-container2 .cancel2 {
-  background-color: #ef672e;
+  background-color: var(--orange);
 }
 
 /* Add some hover effects to buttons */
@@ -582,8 +606,8 @@ h5 {
 
 /* Button used to open the contact form*/
 .open-button3 {
-  background-color: #ef672e;
-  color: white;
+  background-color: var(--orange);
+  color: var(--white);
   padding: 16px 20px;
   border: none;
   cursor: pointer;
@@ -610,8 +634,8 @@ h5 {
   max-width: 400px;
   max-height: 870px;
   padding: 10px;
-  background-color: #158467;
-  color: white;
+  background-color: var(--green);
+  color: var(--white);
 
 }
 
@@ -622,7 +646,7 @@ h5 {
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
-  background: #f1f1f1;
+  background: var(--grey);
 }
 
 .form-container3 input[type=email], .form-container3 input[type=email] {
@@ -631,7 +655,7 @@ h5 {
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
-  background: #f1f1f1;
+  background: var(--grey);
 }
 
 .form-container3 input[type=number], .form-container3 input[type=number] {
@@ -640,29 +664,29 @@ h5 {
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
-  background: #f1f1f1;
+  background: var(--grey);
 }
 
 /* When the inputs get focus, do something */
 .form-container3 input[type=text]:focus, .form-container3 input[type=text]:focus {
-  background-color: #ddd;
+  background-color: var(--dark-white);
   outline: none;
 }
 
 .form-container3 input[type=email]:focus, .form-container3 input[type=email]:focus {
-  background-color: #ddd;
+  background-color: var(--dark-white);
   outline: none;
 }
 
 .form-container3 input[type=number]:focus, .form-container3 input[type=number]:focus {
-  background-color: #ddd;
+  background-color: var(--dark-white);
   outline: none;
 }
 
 /* Set a style for the reservation button */
 .form-container3 .btn3 {
-  background-color: #2c2e65;
-  color: white;
+  background-color: var(--purple-blue);
+  color: var(--white);
   padding: 16px 20px;
   border: none;
   cursor: pointer;
@@ -675,8 +699,8 @@ h5 {
 
 /* Give close button a color */
 .form-container3 .cancel3 {
-  background-color: white;
-  color:  #2c2e65;
+  background-color: var(--white);
+  color:  var(--purple-blue);
   padding: 16px 20px;
   border: none;
   cursor: pointer;
@@ -703,7 +727,7 @@ h5 {
 }
 
 .body-contact{
-  background-color: #EEF2E6;
+  background-color: var(--broken-white);
 }
 
 .wrapper-contact{
@@ -759,5 +783,5 @@ h5 {
 }
 
 .wrapper-contact > div:nth-child(odd){
-  background: #ddd;
+  background: var(--dark-white);
 } */
