--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 :root {
   /* COLORS */
-  --green: #158467;
+  --green: #4E7141; /*158467*/
   --broken-white: #EEF2E6;
   --purple-blue: #2c2e65;
   --orange: #ef672e;
@@ -729,6 +729,7 @@ h5 {
 .body-contact{
   background-color: var(--broken-white);
 }
+
 
 .wrapper-contact{
   display: grid;
