--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 :root {
   /* COLORS */
-  --green: #4E7141; /*158467*/
+  --green: #158467; /*158467*/
   --broken-white: #EEF2E6;
   --purple-blue: #2c2e65;
   --orange: #ef672e;
